CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(mutationValidator)

SET(VERSION_MAJOR "0.8")
SET(VERSION_MINOR "0")
SET(VERSION_PATCH "0")
SET(VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

INCLUDE_DIRECTORIES(src, externals, gtest, tools)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(externals)
ADD_SUBDIRECTORY(gtest)
ADD_SUBDIRECTORY(tools)
